# docs/swagger.json
@@ -34,6 +34,34 @@
                     }
                 }
             }
+        },
+        "/reports/download": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Downloads an Excel report containing transactions and their associated labels.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                ],
+                "tags": [
+                    "reports"
+                ],
+                "summary": "Download Report",
+                "responses": {
+                    "200": {
+                        "description": "Excel report",
+                        "schema": {
+                            "type": "file"
+                        }
+                    }
+                }
+            }
         }
     },
     "securityDefinitions": {
